Start of the SocketIO

--- a/ConnectionTesting/app/build.gradle
+++ b/ConnectionTesting/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "vilallaugle.com.pi_copter"
+        applicationId "vilallaugle.com.connectiontesting"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
@@ -16,9 +16,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug {
-            debuggable true
-        }
     }
 }
 
@@ -27,5 +24,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.github.nkzawa:socket.io-client:0.3.0'
 }
